# MCP-server-client-local-and-remote

./: .env  README.md  client1.py  main.py  pyproject.toml  requirements.txt
