[project]
name = "mcp-streamlit-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.0",
    "langchain-google-genai>=4.1.3",
    "langchain-mcp-adapters>=0.2.1",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
]
